--- a/CSS/style.css
+++ b/CSS/style.css
@@ -130,12 +130,13 @@ h2 {
   display: flex;
   justify-content: center;
   flex: 1;
+  margin-bottom: 1rem;
 }
 
 .content {
   width: 375px;
   height: 500px;
-  margin: 4.5rem 1rem 2.4rem 1rem;
+  margin: 4.5rem 1rem 1.5rem 1rem;
   background-color: brown;
   border-radius: 10px;
   padding: 10px 10px 0px 10px;
