--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,9 @@
 body {
   margin: 0;
   background-color: brown;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   min-height: 100vh;
+  grid-template-rows: 1fr;
 }
 
 #navigation-bar {
@@ -129,7 +129,6 @@ h2 {
   width: 100%;
   display: flex;
   justify-content: center;
-  flex: 1;
   margin-bottom: 1rem;
 }
 
@@ -215,10 +214,12 @@ textarea {
 
 footer {
   width: 100%;
+  height: 35px;
   text-align: center;
   background-color: #666;
   padding: 10px 0;
   box-sizing: border-box;
+  grid-row: 2;
 }
 
 .foot {
