--- a/CSS/style.css
+++ b/CSS/style.css
@@ -153,13 +153,6 @@ h2 {
   color: white;
 }
 
-#konversi, #reset, #reverse {
-  margin: 5px 5px 0 0;
-  border-radius: 8px;
-  padding: 5px;
-  font-weight: bold;
-}
-
 .main .bar:hover {
   background-color: rgb(67, 207, 207);
 }
@@ -189,6 +182,21 @@ textarea {
   margin-top: 2px;
   outline: none;
   border: 2px solid black;
+}
+
+#konversi, #reset, #reverse {
+  margin: 5px 5px 0 0;
+  border-radius: 8px;
+  padding: 5px;
+  font-weight: bold;
+}
+
+#konversi:hover, #reset:hover, #reverse:hover {
+  background-color: aqua;
+}
+
+#konversi:active, #reset:active, #reverse:active {
+  background-color: aquamarine;
 }
 
 #input-value:focus {
