--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,6 +40,7 @@ body {
   list-style: none;
   padding: 0 15px;
   font-family: Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
   box-sizing: border-box;
 }
 
@@ -91,7 +92,7 @@ body {
   .nav-link li {
     margin: 0;
     border-top: 1px solid white;
-    padding: 5px 48px 5px 48px;
+    padding: 5px 49px 5px 49px;
     cursor: pointer;
     box-sizing: border-box;
   }
