--- a/CSS/style.css
+++ b/CSS/style.css
@@ -122,7 +122,7 @@ a {
   color: white;
 }
 
-h2 {
+.name-project {
   margin-top: 0;
   text-align: center;
   color: white;
@@ -134,7 +134,7 @@ h2 {
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-bottom: 1rem;
+  margin-bottom: 2.5rem;
 }
 
 .content {
@@ -211,13 +211,55 @@ textarea {
   font-family: Courier, monospace;
 }
 
-#displayImage1, #displayImage2 {
-  width: auto;
-  height: auto;
+h3 {
+  margin: 2px 0 10px 0;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-decoration: underline;
+}
+
+h4, .celcius-kaonversi, .fahrenheit-kaonversi {
+  margin: 0;
+  padding: 0;
+}
+
+.title-rumus {
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-decoration: underline;
+}
+
+#displayImage1 {
+  width: 380px;
+  height: 520px;
   position: absolute;
   margin-top: 7rem;
   display: none;
   border-radius: 10px;
+  background-color: rgb(220, 226, 226);
+  padding: 5px 10px;
+  text-align: justify;
+  border: 3px solid black;
+  box-sizing: border-box;
+}
+
+#displayImage2 {
+  width: 350px;
+  height: 210px;
+  position: absolute;
+  margin-top: 7rem;
+  display: none;
+  border-radius: 10px;
+  border: 3px solid black;
+  background-color: rgb(220, 226, 226);
+  padding: 5px 10px;
+  text-align: justify;
+}
+
+.lihat-rumus {
+  font-size: 20px;
+  font-weight: bold;
 }
 
 #img-kalkulasi, #img-rumus {
